--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -2,10 +2,18 @@ body html {
     margin: 0;
     padding: 0;
 }
-
+.containerCenter{
+    display: flex;
+    flex-direction: row;
+    display: 100vw;
+}
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 40px;
+    padding: 10px;
 
 }
 
@@ -32,7 +40,10 @@ body html {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     margin-right: 70px;
+    margin-top: 0;
+    
 }
 .button {
     display: flex;
@@ -41,10 +52,8 @@ body html {
     margin-left: auto;
 }
 .titulo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    font-size: 2em;
+    
 }
 
 .contain {
