--- a/client/src/components/PageHeader/pageHeader.module.css
+++ b/client/src/components/PageHeader/pageHeader.module.css
@@ -1,5 +1,32 @@
 .PageHeader {
     min-height: 150px;
     width: 100%;
+    display: flex;
+    justify-content: center;
     background-color: var(--blue);
+
 }
+
+    .PageHeader__Title {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }  
+        .title {
+            color: white;
+            font-weight: bolder;
+            font-size: 2em;
+            margin-bottom: 35px;
+            margin-left: 45px;
+        }
+
+    .PageHeader__Description {
+        max-width: 60%;
+        width: 60%;
+        padding: 0 30px;
+        display: flex;
+        align-items: center;
+        font-size: 1.25em;
+        color: white;
+    }
