--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -1,7 +1,7 @@
 .Post {
-    border: solid red 1px;
     width: 80%;
     min-height: 400px;
     margin-top: 25px;
     border-radius: 5px;
+    background-color: var(--lightblue);
 }
