--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -31,11 +31,18 @@
             color: #095084;
             border-radius: 50px;
             height: 31.84px;
-            width: 175px;
+            width: 185px;
             display: flex;
             justify-content: center;
             align-items: center;
+            font-weight: bolder;
+            transition: background-color 0.2s;
         }
+        .backButton:hover {
+            background-color: var(--blue);
+            color: white
+        }
+
 
 
 
