--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -5,4 +5,7 @@
     border-radius: 5px;
     background-color: var(--lightblue);
     color: inherit;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
