--- a/client/src/components/QuestionCreate/QuestionCreate.module.css
+++ b/client/src/components/QuestionCreate/QuestionCreate.module.css
@@ -4,6 +4,8 @@
     align-items: center;
     justify-self: center;
     height: 60vh;
+    padding: 2rem;
+    margin: 10px;
 }
 .div{
 
@@ -21,7 +23,7 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    margin: 50px;
+    /* margin: 50px; */
     box-shadow: -2px -1px 6px 6px #fff;
     border: 1px solid #cbd5e1;
 }
