--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -2,7 +2,7 @@
     min-height: 100px;
     max-height: 100px;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
 }
 
     .header {
@@ -10,8 +10,8 @@
         height: 100px;
         width: 100%;
         display: flex;
-        justify-content: space-around;
-        gap: 280px;
+        justify-content: center;
+        gap: 420px;
         align-items: center;
         position: fixed;
         background-color: white;
@@ -22,24 +22,26 @@
     }
 
         .title {
-            font-size: 24px;
+            font-size: 2em;
             margin-bottom: 6.4px;
+            font-weight: lighter;
         }
 
         .backButton {
-            border: solid #095084 2px;
-            color: #095084;
+            border: solid var(--darkblue) 2px;
+            color: var(--blue);
             border-radius: 50px;
             height: 31.84px;
-            width: 185px;
+            min-width: 185px;
             display: flex;
             justify-content: center;
             align-items: center;
             font-weight: bolder;
-            transition: background-color 0.2s;
+            transition: background-color, border, color 0.4s;
         }
         .backButton:hover {
-            background-color: var(--blue);
+            background-color: var(--darkblue);
+            border: solid var(--blue) 2px;
             color: white
         }
 
