Publicaciones visualizadas en el home

--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -9,3 +9,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+.img {
+    border: solid black 2px;
+    max-width: 100%;
+    width: 100%;
+    height: 60%;
+}
