--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -3,14 +3,8 @@ body html {
     padding: 0;
 }
 @font-face {
-    font-family: 'MiFuente';
-    src: url('../../fonts//VisbyRoundCF-Regular.otf');
-}
-@font-face {
-    font-family: 'MiFuente';
-    src: url('../../fonts//VisbyRoundCF-ExtraBold.otf');
-    font-weight: bold;
-    
+    font-family: 'MiFuenteBold';
+    src: url('../../fonts/VisbyRoundCF-ExtraBold.otf');
 }
 :root {
     --color-primario:#0f3054;
@@ -30,13 +24,17 @@ body html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 40px;
+    /* margin: 40px; */
     padding: 10px;
 
 }
+.contain h4{
+    font-family: 'MiFuenteBold';
+}
 .container h1{
-    font-family: 'MiFuente';
+    font-family: 'MiFuenteBold';
     font-weight: bold;
+    color: #005692;
 }
 
 .title {
@@ -72,6 +70,7 @@ body html {
     margin-top: 0;
     
 }
+
 .button {
     display: flex;
     flex-direction: row;
@@ -87,7 +86,6 @@ body html {
     display: flex;
     flex-direction: column;
     align-items: start;
-    font-family: 'MiFuente';
     justify-content: center;
     padding: 1rem;
     border-bottom: var(--color-primario) solid 1px ;
@@ -99,14 +97,13 @@ body html {
     
 }
 .contain button:hover{
-    background: var(--color-primario);
+    background: var(--color-terciario);
+    transition: 0.3s;
 }
 .contain p{
     font-size: 1.1em;
 }
 .contain button{
-    font-family: 'MiFuente';
-    /* font-weight: bold;/ */
     display: flex;
     flex-direction: row;
     border: var(--color-primario);
@@ -116,7 +113,10 @@ body html {
     margin: 0.3rem;
     font-size: 0.9rem;
     background-color: var(--color-primario);
-    border-radius: 5% 5%;
+    border-radius: 6%;
+    min-height: 5vh;
+    max-height: 5vh;
+    transition: 0.3s;
     /* box-shadow: -2px -1px 6px 6px #fff; */
     /* border: 2px solid #0083C5; */
     color: #FFF;
