--- a/client/src/views/FormContainer/container.css
+++ b/client/src/views/FormContainer/container.css
@@ -132,6 +132,29 @@
     justify-content: center;
   
   }
+  .form__success{
+    background: var(--blue_color);
+    margin-bottom: 1rem;
+    color: #fff;
+    width: 80%;
+    padding: 0.5rem;
+    margin: 0 auto 1rem auto;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 0.6rem;
+    animation: success 1s ease-in ;
+  }
+
+  @keyframes success {
+    0%{
+   
+      margin-left: 30rem;
+    }
+    100%{
+     
+      margin-left: 0;
+    }
+  }
   .publication__image{
     width: 100%;
     
