--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -45,6 +45,29 @@
             color: white
         }
 
+@media (max-width: 992px) {
+    .header {
+        gap: 230px
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        gap: 50px
+    }
+    
+}
+
+@media (max-width: 576px) {
+    .backButton {
+        display: none;
+    }
+    .header {
+        justify-content: flex-start;
+        padding-left: 20px;
+    }
+}
+
 
 
 
