--- a/client/src/components/PageHeader/pageHeader.module.css
+++ b/client/src/components/PageHeader/pageHeader.module.css
@@ -8,7 +8,7 @@
 }
 
     .PageHeader__Title {
-        width: 40%;
+        width: 60%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -38,3 +38,36 @@
         color: white;
         font-weight: lighter;
     }
+
+@media (max-width: 768px) {
+    .PageHeader {
+        flex-direction: column;
+        align-items: center;
+        padding: 45px 30px;
+
+
+    }
+    .PageHeader__Title {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
+        margin-right: 180px;
+    }
+    .PageHeader__icon {
+        margin-left: 20px;
+    }
+   
+    .PageHeader__Description {
+        max-width: 80%;
+        width: 80%;
+        padding: 0;
+    }
+    
+}
+
+@media (max-width: 576px) {
+    .PageHeader {
+        align-items: flex-start;
+    }
+}
+
