--- a/client/src/views/HomeView/home.module.css
+++ b/client/src/views/HomeView/home.module.css
@@ -1,6 +1,15 @@
-.Home {
-    height: 800px;
+.HomeView {
+    min-height: 95vh;
+    max-height: 120vh;
     display: flex; 
+}
+    
+
+
+@media screen and (max-width: 768px) {
+    .HomeView {
+        flex-direction: column;
+    }
 }
 
     
