--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -1,5 +1,5 @@
 .Post {
-    width: 80%;
+    width: 90%;
     min-height: 400px;
     margin-top: 25px;
     border-radius: 5px;
@@ -11,8 +11,14 @@
 }
 
 .img {
-    border: solid black 2px;
+    border: solid black 1px;
     max-width: 100%;
     width: 100%;
     height: 60%;
+}
+
+@media screen and (max-width: 992px) {
+    .Post {
+        width: 97%;
+    }
 }
