--- a/client/src/components/SearchBar/searchBar.module.css
+++ b/client/src/components/SearchBar/searchBar.module.css
@@ -1,21 +1,25 @@
 .SearchBar {
-    min-height: 50px;
+    height: 45px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 10px;
-    margin-top: 10px;
-    /* border-bottom: solid var(--darkblue) 1px; */
+    background-color: var(--darkblue);
 }
 
 
     .SearchBar input {
         width: 50%;
-        height: 100%;
+        height: 75%;
         border-radius: 4px;
         border: none;
         background-color: #EFEFEF;
         padding-left: 5px;
         font-family: inherit;
     }
+
+@media screen and (max-width: 768px) {
+    .SearchBar input {
+        width: 80%
+    }
+}
