--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -8,14 +8,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
-.img {
-    border: solid black 1px;
-    max-width: 100%;
-    width: 100%;
-    height: 60%;
-}
+    .category {
+        position: absolute;
+        right: 2%;
+    }
+
+    .description {
+        flex: 1;
+        width: 100%;
+        display: flex;
+        border: solid red 1px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .img {
+        border: solid black 1px;
+        width: 300px;
+        height: 300px;
+        align-self: flex-start;
+        display: inline;
+    }
 
 @media screen and (max-width: 992px) {
     .Post {
