--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -10,22 +10,34 @@
     align-items: center;
     position: relative;
 }
+    .Post__icon {
+        height: 30px;
+        width: 30px;
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        border: solid black 1px;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+    .Post__icon:hover {
+        background-color: red;
+    }
 
-    .category {
+    .Post__category {
         position: absolute;
         right: 2%;
     }
 
-    .description {
+    .Post__description {
         flex: 1;
         width: 100%;
         display: flex;
-        border: solid red 1px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
 
-    .img {
+    .Post__img {
         border: solid black 1px;
         width: 300px;
         height: 300px;
