--- a/client/src/components/LeftBar/leftBar.module.css
+++ b/client/src/components/LeftBar/leftBar.module.css
@@ -28,6 +28,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
             font-size: 1.5em;
             background: var(--lightblue);
             transition: background-color, border, color 0.4s;
