--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -30,6 +30,7 @@ body html {
 }
 .contain h4{
     font-family: 'MiFuenteBold';
+    margin: 10px;
 }
 .container h1{
     font-family: 'MiFuenteBold';
@@ -79,6 +80,7 @@ body html {
 }
 .titulo {
     font-size: 2em;
+    margin: 1rem;
     
 }
 
@@ -87,11 +89,13 @@ body html {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    padding: 1rem;
+    padding: 1.5rem;
     border-bottom: var(--color-primario) solid 1px ;
     transition: 0.5s;
-    min-height: 32vh;
-    max-height: 32vh;
+    /* min-height: 32vh;
+    max-height: 32vh; */
+    max-width: 60vw;
+    min-width: 60vw;
     margin: 10px;
     background-color: var(--color-cuartiario);
     
@@ -110,7 +114,7 @@ body html {
     align-items: center;
     justify-content: center;
     padding:  0.8rem 1rem; 
-    margin: 0.3rem;
+    margin-top: 1rem;
     font-size: 0.8rem;
     background-color: var(--color-primario);
     border-radius: 5px;
@@ -137,14 +141,12 @@ body html {
     flex-direction: column;
     align-items: center;
 }
-
-.center {
+.center{
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    width: 58vw;
-    padding: 10px;
+    width: 55vw;
 }
+
 @media (max-width: 575.98px) {  
     .contain{
      margin-top: 20px;
@@ -176,6 +178,19 @@ body html {
     }
     .containerCenter{
         display:flex;
+        flex-direction: column;
        
     }
+}
+@media (max-width: 768px){
+    .containerCenter{
+        display: flex;
+        flex-direction: column;
+    }
+    .contain{
+        margin: 20px;
+        width: 80vw;
+        /* height: 100vh; */
+    }
+
 }
