Update css foro

--- a/client/src/components/QuestionCreate/QuestionCreate.module.css
+++ b/client/src/components/QuestionCreate/QuestionCreate.module.css
@@ -36,8 +36,23 @@
 .div input{
     padding: 0.2rem;
     border: 1px solid #cbd5e1;
-    width: 100%;
+    width: 100% ;
 }
 .form button{
+    width: 94%;
     padding: 0.4rem;
+    background: var(--blue_color);
+    color: #fff;
+    margin-top: 0.5rem;
+    display: block;
+    border: none;
+    padding: 0.5rem;
+    cursor: pointer;
+    margin: 0.8rem auto 0 auto;
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
+.form button:hover{
+    
+    background: #034879;
 }
