--- a/client/src/components/Posts/posts.module.css
+++ b/client/src/components/Posts/posts.module.css
@@ -11,7 +11,7 @@
         width: 100%;
         flex: 1;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
     }
 
