--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -37,7 +37,7 @@
             justify-content: center;
             align-items: center;
             font-weight: bolder;
-            transition: background-color, border, color 0.4s;
+            transition: border, color, background-color 0.2s;
         }
         .backButton:hover {
             background-color: var(--darkblue);
