--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -1,32 +1,54 @@
 .Post {
     width: 90%;
-    min-height: 400px;
     margin-top: 25px;
     border-radius: 5px;
     background-color: var(--lightblue);
     color: inherit;
     display: flex;
     flex-direction: column;
-    align-items: center;
     position: relative;
 }
     .Post__icon {
         height: 30px;
         width: 30px;
-        position: absolute;
-        left: 5px;
-        top: 5px;
         border: solid black 1px;
         border-radius: 5px;
         transition: background-color 0.3s;
+        margin-right: 3px;
     }
     .Post__icon:hover {
         background-color: red;
     }
 
+    .Post__title {
+        border: solid black 1px;
+        width: 100%;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+        background-color: var(--darkblue);
+        color: white;
+        padding: 2px
+    }
+
+    .Post__Organization {
+        display: flex;
+        align-items: flex-end;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-bottom: 10px;
+        padding: 2px;
+    }
+   
+    .organizationName {
+        font-weight: 500;
+        margin-left: 5px;
+    }
+
     .Post__category {
         position: absolute;
-        right: 2%;
+        right: 1%;
+        top: 3px;
+        color: gray
     }
 
     .Post__description {
@@ -35,6 +57,8 @@
         display: flex;
         overflow: hidden;
         text-overflow: ellipsis;
+        padding: 2px;
+        font-size: 1.25em
     }
 
     .Post__img {
@@ -43,6 +67,15 @@
         height: 300px;
         align-self: flex-start;
         display: inline;
+    }
+
+    .Post__BottomBar {
+        border-top: solid gray 1px;
+        height: 35px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
     }
 
 @media screen and (max-width: 992px) {
