--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -8,17 +8,7 @@
     flex-direction: column;
     position: relative;
 }
-    .Post__icon {
-        height: 30px;
-        width: 30px;
-        border: solid black 1px;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-        margin-right: 3px;
-    }
-    .Post__icon:hover {
-        background-color: red;
-    }
+
 
     .Post__title {
         border: solid black 1px;
@@ -35,8 +25,8 @@
         align-items: flex-end;
         overflow: hidden;
         text-overflow: ellipsis;
-        margin-bottom: 10px;
         padding: 2px;
+        background-color: var(--blue);
     }
    
     .organizationName {
@@ -54,11 +44,13 @@
     .Post__description {
         flex: 1;
         width: 100%;
+        min-height: 40px;
         display: flex;
         overflow: hidden;
         text-overflow: ellipsis;
-        padding: 2px;
-        font-size: 1.25em
+        font-size: 1.25em; 
+        border-top: solid black 1px;
+        border-bottom: solid black 1px
     }
 
     .Post__img {
@@ -70,13 +62,44 @@
     }
 
     .Post__BottomBar {
-        border-top: solid gray 1px;
-        height: 35px;
+        min-height: auto;
         width: 100%;
+        position: relative;
         display: flex;
-        align-items: center;
-        justify-content: flex-end;
+        background-color: var(--darkblue);
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px
     }
+
+        .BottomBar__deleteIcon {
+            height: 30px;
+            width: 30px;
+            border-radius: 5px;
+            transition: background-color 0.2s;
+            color: white;
+            position: absolute;
+            right: 2px;
+        }
+        .BottomBar__deleteIcon:hover {
+            background-color: red;
+        }
+
+        .BottomBar__calendarIcon {
+            color: white;
+            width: 30px;
+            height: 30px;
+        }
+        .BottomBar__startDate {
+            color: white;
+            display: inline;
+            align-self: center;
+            margin-left: 5px;
+            font-size: 1.3em
+        }
+
+
+     
 
 @media screen and (max-width: 992px) {
     .Post {
