--- a/client/src/components/QuestionCreate/QuestionCreate.module.css
+++ b/client/src/components/QuestionCreate/QuestionCreate.module.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: center;
     margin: 10px;
-    width: 20vw;
+    width: 30vw;
 }
 
 
@@ -30,6 +30,7 @@
     /* margin: 50px; */
     box-shadow: -2px -1px 6px 6px #fff;
     border: 1px solid #cbd5e1;
+    width: 35%;
 }
 .div label{
     font-family: 'Fuente';
@@ -41,10 +42,10 @@
 .div input{
     padding: 0.2rem;
     border: 1px solid #cbd5e1;
-    width: 100% ;
+    width: 80%;
 }
 .form button{
-    width: 94%;
+    width: 80%;
     padding: 0.4rem;
     background: var(--blue_color);
     color: #fff;
@@ -62,7 +63,13 @@
     
     background: #034879;
 }
-
+.form textarea{
+    width: 80%;
+}
+.select{
+    width: 80%;
+    margin: 20px;
+}
 .errores{
     color: red;
     font-size: 0.7rem;
@@ -70,4 +77,10 @@
     min-height: 3vh;
     max-height: 3vh;
     margin: 6px;
+}
+.selectError{
+    width: 80%;
+    margin: 20px;
+    color: rgba(255, 0, 0, 0.226);
+    border: #034879;
 }
