--- a/client/src/views/QuestionCreateView/QuestionCreate.module.css
+++ b/client/src/views/QuestionCreateView/QuestionCreate.module.css
@@ -32,17 +32,25 @@
     border: 1px solid #cbd5e1;
     width: 35%;
 }
+textarea:focus,input:focus {
+    outline: none;
+    background-color: #ddd;
+    box-shadow: 0 0 10px #719ECE; 
+}
+
 .div label{
     font-family: 'Fuente';
     font-weight: bold;
-    /* margin: 0.6rem ; */
+    margin: 0 ;
+    font-size: 0.9rem;
     padding: auto;
     
 }
 .div input{
-    padding: 0.2rem;
+    padding: 0.6rem;
     border: 1px solid #cbd5e1;
     width: 80%;
+    border-radius: 5px;
 }
 .form button{
     width: 80%;
@@ -65,22 +73,19 @@
 }
 .form textarea{
     width: 80%;
+    padding: 0.8rem;
+    border-radius: 5px;
+    
 }
 .select{
     width: 80%;
-    margin: 20px;
+    /* margin: 20px; */
 }
 .errores{
     color: red;
     font-size: 0.7rem;
-    height: 3vh;
-    min-height: 3vh;
-    max-height: 3vh;
+    height: 2.4vh;
+    min-height: 2.4vh;
+    max-height: 2.4vh;
     margin: 6px;
-}
-.selectError{
-    width: 80%;
-    margin: 20px;
-    color: rgba(255, 0, 0, 0.226);
-    border: #034879;
 }
