--- a/client/src/views/QuestionCreateView/QuestionCreate.module.css
+++ b/client/src/views/QuestionCreateView/QuestionCreate.module.css
@@ -52,22 +52,34 @@ textarea:focus,input:focus {
     width: 80%;
     border-radius: 5px;
 }
-.form button{
-    width: 80%;
+.buttonDisable{
+    width: 85%;
+    display: block;
+    margin: 0.8rem auto 0 auto;
+    opacity: 0.7;
+    background: var(--blue_color);
+    border: none;
+    padding: 0.4rem;
+    font-weight: bolder;
+    font-size: 1.2rem;
+    color: #fff;
+
+}
+.button{
+    width: 85%;
     padding: 0.4rem;
     background: var(--blue_color);
     color: #fff;
-    margin-top: 0.5rem;
     display: block;
     border: none;
-    padding: 0.5rem;
+    padding: 0.4rem;
     cursor: pointer;
-    margin: 0.8rem auto 0 auto;
     font-weight: bolder;
     font-size: 1.2rem;
+    margin: 0.8rem auto 0 auto;
 }
 
-.form button:hover{
+.button:hover{
     
     background: #034879;
 }
