--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -4,7 +4,7 @@ body html {
 }
 @font-face {
     font-family: 'MiFuenteBold';
-    src: url('../../fonts/VisbyRoundCF-Medium.otf');
+    src: url('../../fonts/VisbyRoundCF-Bold.otf');
 }
 :root {
     --color-primario:#0f3054;
@@ -25,7 +25,7 @@ body html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Alinea los elementos al inicio */
+    justify-content: flex-start; 
     padding: 10px;
     height: 100vh;
     min-height: 100vh;
@@ -58,8 +58,6 @@ body html {
     font-size: 1em;
 }
 .contain:hover{
-    /* background-color: #74baff5b; */
-    /* border: none; */
     transition: 0.3s;
 }
 .respuestas {
@@ -95,8 +93,8 @@ body html {
     padding: 1.5rem;
     border-bottom: var(--color-primario) solid 1px ;
     transition: 0.5s;
-    /* min-height: 32vh;
-    max-height: 32vh; */
+    min-height: 32vh;
+    max-height: 32vh;
     max-width: 60vw;
     min-width: 60vw;
     margin: 10px;
