--- a/client/src/views/ProfileView/Profile.css
+++ b/client/src/views/ProfileView/Profile.css
@@ -21,6 +21,10 @@
 .profile__span {
     color: var(--blue_color);
 }
+.P__navLink {
+    color: var(--blue_color);
+}
+
 .profile__h3{
     color: var(--dark_blue_color);
     padding: 0.4rem;
@@ -125,3 +129,43 @@
     grid-template-columns: 1fr 3fr;
     margin-bottom: 10px;
 }
+.profile__drawer--links{
+        display:flex;
+        flex-direction: column;
+        row-gap: 1rem;
+        height: 100%
+
+}
+.profile__picture--img{
+    width: 87px;
+    border-radius: 100%;
+    object-fit: contain;
+}
+/* CSS */
+.profile__upload--wrapper {
+    position: relative;
+    display: inline-block;
+    margin-top: 3.5rem;
+  }
+  
+  .profile__upload--label {
+    background-color: #fff;
+    color: #000;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 1em;
+    border: 1px solid #cbd5e1;
+    border-radius: 100%;
+  }
+  
+  .profile__upload--label:hover {
+    background-color: #adb2b9;;
+  }
+  .profile__button--update{
+
+    border: 1px solid #005692;
+    margin-top: 2rem;
+    background: #fff;
+    color: #005692;
+
+  }
