update css detail

--- a/client/src/views/PostDetailView/postDetail.module.css
+++ b/client/src/views/PostDetailView/postDetail.module.css
@@ -1,6 +1,73 @@
+@font-face {
+    font-family: 'MiFuente';
+    src: url('../../fonts/VisbyRoundCF-Light.otf');
+}
 .DetailView {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
+    justify-content: safe;
+    min-height: 80vh;
+    margin: 2rem;
+    padding: 0.5rem;
+    background: var(--blue_color);
+    border: 1px solid rgb(128, 128, 128);
+    width: 90vw;
+    border-radius: 10px;
+    box-shadow: -1px 1px 9px 9px rgba(226, 217, 252, 0.22)
+}
+
+.Image{
+    /* margin: 40px; */
+    height: 65vh;
+    min-height: 65vh;
+    padding: 20px;
+    min-width: 45vw;
+    max-width: 45vw;
+    opacity: 1;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px rgba(0, 0, 0, 0.109) solid;
+    /* margin:1rem; */
+    /* border-top: 1px rgba(0, 0, 0, 0.109) solid; */
+}
+.Image img{
+    width: 30vh;
+    opacity: 1;
+    min-width: 30vw;
+    max-width: 30vw;
+}
+.Detail{
+    padding: 1rem;
+    display: flex;
+    height:100%;
+    min-height: 65vh;
+    margin-top: 1rem;
+    flex-direction: column;
+    align-items: start;
+    width: 44vw;
+    min-width: 44vw;
+    max-width: 44vw;
+    border-left: 1px rgba(0, 0, 0, 0.109) solid;
+    border-top: 1px rgba(0, 0, 0, 0.109) solid;
+    
+}
+.Detail h1{
+    font-size:2rem;
+    margin-top: 10px;
+}
+.Detail h2{
+    margin-bottom: 20px;
+    font-family: 'MiFuente';
+}
+.Detail h3{
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
+    font-size: 1.1rem;
+}
+.Detail p{
+    font-size: 0.9rem;
 }
