--- a/client/src/views/QuestionView/QuestionDetail.module.css
+++ b/client/src/views/QuestionView/QuestionDetail.module.css
@@ -13,6 +13,16 @@
     display: flex;
     font-family: 'FuenteBold';
 }
+.errores{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 4vh;
+    max-height: 4vh;
+    font-size: 0.65rem;
+    color: red;
+}
+
 .title h2{
     display: flex;
     align-items: center;
