--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -1,6 +1,7 @@
+
 .Post {
-    width: 90%;
-    margin-top: 25px;
+    width: 70%;
+    margin: 10px 0;
     border-radius: 5px;
     background-color: var(--lightblue);
     color: inherit;
@@ -54,24 +55,40 @@
         flex: 1;
         min-height: 40px;
         display: flex;
+        justify-content: center;
+        align-items: center;
         overflow: hidden;
         text-overflow: ellipsis;
         font-size: 1.25em; 
         border-top: solid black 1px;
-        border-bottom: solid black 1px
+        border-bottom: solid black 1px;
+        position: relative;
+        overflow: hidden;
     }
-
+ 
     .image {
-        width: auto;
+        /* width: auto;
         max-height: 100%;
         align-self: flex-start;
-        display: inline;
+        display: inline; */
+        /* margin: 20px auto; */
+        max-width: 100%;
+        height: auto;
+        margin: 0 auto;
+        box-shadow: 0 0 1200px 0 rgba(0, 0, 0, 0.771);
     }
+    .imageBlur {
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: auto;
+        filter: blur(10px);
+    }
+
 
     .Post__BottomBar {
         min-height: auto;
         width: 100%;
-        position: relative;
         display: flex;
         align-items: center;
         background-color: var(--darkblue);
@@ -79,20 +96,6 @@
         border-bottom-right-radius: 5px;
         padding: 2px
     }
-
-        .BottomBar__deleteIcon {
-            height: 30px;
-            width: 30px;
-            border-radius: 5px;
-            transition: background-color 0.2s;
-            color: white;
-            position: absolute;
-            right: 2px;
-        }
-        .BottomBar__deleteIcon:hover {
-            background-color: red;
-        }
-
         .BottomBar__calendarIcon {
             color: white;
             width: 30px;
@@ -105,6 +108,17 @@
             padding-right: 5px;
             font-size: 1.3em;
             border-right: solid gray 1px;
+        }
+        .BottomBar__deleteIcon {
+            height: 35px;
+            width: 35px;
+            border-radius: 5px;
+            transition: background-color 0.2s;
+            color: white;
+            right: 2px;
+        }
+        .BottomBar__deleteIcon:hover {
+            background-color: red;
         }
         
         .BottomBar__SocialIcons {
@@ -136,21 +150,15 @@
             }
             .SocialIcons__commentContainer:hover {
                 background-color: var(--blue)
-
-            }
-                
+            }         
                 .commentIcon {
                     color: white;
                     width: 30px;
                     height: 30px;
                 }
 
-.swallowOkButton {
-    background-color: var(--blue);
-}
 
-
-     
+  
 
 @media screen and (max-width: 992px) {
     .Post {
