--- a/client/src/components/Posts/posts.module.css
+++ b/client/src/components/Posts/posts.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 40px;
+    border-left: solid gray 1px;
 }
 
     .Cards {
