--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -30,12 +30,13 @@
 
     .Post__Organization {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         overflow: hidden;
         text-overflow: ellipsis;
         padding: 2px;
         background-color: var(--blue);
         color: rgb(225, 225, 225);
+
     }
    
     .organizationName {
@@ -65,13 +66,12 @@
         position: relative;
         overflow: hidden;
     }
+    .Post__description p {
+        margin: 5px;
+    }
  
     .image {
-        /* width: auto;
-        max-height: 100%;
-        align-self: flex-start;
-        display: inline; */
-        /* margin: 20px auto; */
+
         max-width: 100%;
         height: auto;
         margin: 0 auto;
@@ -109,17 +109,7 @@
             font-size: 1.3em;
             border-right: solid gray 1px;
         }
-        .BottomBar__deleteIcon {
-            height: 35px;
-            width: 35px;
-            border-radius: 5px;
-            transition: background-color 0.2s;
-            color: white;
-            right: 2px;
-        }
-        .BottomBar__deleteIcon:hover {
-            background-color: red;
-        }
+       
         
         .BottomBar__SocialIcons {
             margin: 0 5px;
@@ -157,6 +147,26 @@
                     height: 30px;
                 }
 
+        
+
+
+    .BottomBar__OptionsContainer {
+        position: relative;
+        border-radius: 5px;
+        height: 35px;
+        width: 35px;
+        transition: background-color 0.2s;
+        padding: 5px
+    }
+    .BottomBar__OptionsContainer:hover {
+        background-color: var(--blue);
+    }
+        .BottomBar__optionsIcon {
+            height: 100%;
+            width: 100%;
+            color: white;
+        } 
+        
 
   
 
